--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-ACCESS_KEY=rsshub4wisdomfurnace
+ACCESS_KEY=${ACCESS_KEY}
 ALLOW_USER_SUPPLY_UNSAFE_DOMAIN=true
 ALLOW_LOCALHOST=true
-MINIFLUX_INSTANCE=https://miniflux.wisdomfurnace.com
-MINIFLUX_TOKEN=97lQYLSQXrOSaFmMTvVhMVMAIzfoL0H_Hv7CAB3QJjQ=
+MINIFLUX_INSTANCE=${MINIFLUX_INSTANCE}
+MINIFLUX_TOKEN=¥{MINIFLUX_TOKEN}
