--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ ACCESS_KEY=${ACCESS_KEY}
 ALLOW_USER_SUPPLY_UNSAFE_DOMAIN=true
 ALLOW_LOCALHOST=true
 MINIFLUX_INSTANCE=${MINIFLUX_INSTANCE}
-MINIFLUX_TOKEN=¥{MINIFLUX_TOKEN}
+MINIFLUX_TOKEN=${MINIFLUX_TOKEN}
