--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-ACCESS_KEY=${ACCESS_KEY}
+ACCESS_KEY=${{ ACCESS_KEY }}
 ALLOW_USER_SUPPLY_UNSAFE_DOMAIN=true
 ALLOW_LOCALHOST=true
-MINIFLUX_INSTANCE=${MINIFLUX_INSTANCE}
-MINIFLUX_TOKEN=${MINIFLUX_TOKEN}
+MINIFLUX_INSTANCE=${{ MINIFLUX_INSTANCE }}
+MINIFLUX_TOKEN=${{ MINIFLUX_TOKEN }}
